# L2-Order-Book-Quote-Simulator

./: .gitignore  LICENSE  README.md  main.py  order_book.py  pyproject.toml
l2_sim/: __init__.py  execution.py  inventory.py  l2_book.py  logging_util.py  obi.py  quoting.py  simulation.py  tui_depth.py
